# JugiCineHL

./: CMakeLists.txt  ProjectInfo.md  README.md
examples/Testbed/: imgui.ini
jugicineHL/: jpAttribute.cpp  jpAttribute.h  jpGameObjectsLoader_xml.cpp  jpGameObjectsLoader_xml.h  jpGlobal.cpp  jpGlobal.h  jpObjectFactory.cpp  jpObjectFactory.h  jpObjectParser.cpp  jpObjectParser.h  jpPlayedApp.cpp  jpPlayedApp.h  jpPlayedScene.cpp  jpPlayedScene.h  jpQueries.cpp  jpQueries.h  jpUtilities.cpp  jpUtilities.h  jpVariables.cpp  jpVariables.h  sources.cmake
jugicineHL/actions/: jpActionsCommon.cpp  jpActionsCommon.h  jpCommands_Gui.cpp  jpCommands_Gui.h  jpCommands_Logic.cpp  jpCommands_Logic.h  jpConditions.cpp  jpConditions.h  jpTransition.cpp  jpTransition.h  jpTransitionOperations.cpp  jpTransitionOperations.h  jpTriggers_Gui.cpp  jpTriggers_Gui.h  jpTriggers_Input.cpp  jpTriggers_Input.h  jpTriggers_Logic.cpp  jpTriggers_Logic.h
jugicineHL/character/: jpCharacterAction.cpp  jpCharacterAction.h
jugicineHL/character/NOT_USED/: jpCharacterBase.cpp  jpCharacterBase.h  jpCharacterSystem.cpp  jpCharacterSystem.h
jugicineHL/components/: jpComponentsCommon.cpp  jpComponentsCommon.h  jpConfirmPanel.cpp  jpConfirmPanel.h  jpInputCustomizer.cpp  jpInputCustomizer.h  jpLanguageSelector.cpp  jpLanguageSelector.h  jpMessagePanel.cpp  jpMessagePanel.h  jpNewUserPanel.cpp  jpNewUserPanel.h  jpUserSelector.cpp  jpUserSelector.h
jugicineHL/data/: jpData.cpp  jpData.h  jpDataUtilities.cpp  jpDataUtilities.h  jpItem.cpp  jpItem.h
jugicineHL/entitySystem/: jpB2Body.cpp  jpB2Body.h  jpB2Callbacks.cpp  jpB2Callbacks.h  jpB2DebugDraw.cpp  jpB2DebugDraw.h  jpB2Fixture.cpp  jpB2Fixture.h  jpB2Utilities.cpp  jpB2Utilities.h  jpB2World.cpp  jpB2World.h  jpEntity.cpp  jpEntity.h  jpEntityCharacter.cpp  jpEntityCharacter.h  jpEntityCommon.cpp  jpEntityCommon.h  jpEntityGlobal.cpp  jpEntityGlobal.h  jpEntityGroups.cpp  jpEntityGroups.h  jpEntityLogicState.cpp  jpEntityLogicState.h  jpEntityManager.cpp  jpEntityManager.h  jpEntityPhase.cpp  jpEntityPhase.h  jpEntitySystem.cpp  jpEntitySystem.h  jpEntityUtilities.cpp  jpEntityUtilities.h  jpSourceEntity.cpp  jpSourceEntity.h
jugicineHL/entitySystem/movements/: jpAngularVelocity.cpp  jpAngularVelocity.h  jpAnimatedBehavior.cpp  jpAnimatedBehavior.h  jpCustomState.cpp  jpCustomState.h  jpGroundMovement.cpp  jpGroundMovement.h  jpJumpMovement.cpp  jpJumpMovement.h  jpMovementBase.cpp  jpMovementBase.h  jpMovementCommon.cpp  jpMovementCommon.h  jpPathMovement.cpp  jpPathMovement.h  jpPathPtPMovement.cpp  jpPathPtPMovement.h  jpSpeedGenerators.cpp  jpSpeedGenerators.h
jugicineHL/entitySystem/scripting/: jpBehCfg.cpp  jpBehCfg.h  jpBehCommands.cpp  jpBehCommands.h  jpBehConditions.cpp  jpBehConditions.h  jpBehavior.cpp  jpBehavior.h
jugicineHL/entitySystem/scriptingNOTUSED/: jpBehCfg.cpp  jpBehCfg.h  jpBehCommands.cpp  jpBehCommands.h  jpBehConditions.cpp  jpBehConditions.h  jpBehavior.cpp  jpBehavior.h
jugicineHL/entitySystem/task/: jpTaskBase.cpp  jpTaskBase.h  jpTaskCommon.cpp  jpTaskCommon.h  jpTransporter.cpp  jpTransporter.h
jugicineHL/gfxObjects/: jpAnimationObjects.cpp  jpAnimationObjects.h  jpCompound.cpp  jpCompound.h  jpGfxObjectsCommon.cpp  jpGfxObjectsCommon.h  jpMoving.cpp  jpMoving.h
jugicineHL/gui/: jpGuiCommon.cpp  jpGuiCommon.h  jpGuiSystem.cpp  jpGuiSystem.h  jpGuiUtilities.cpp  jpGuiUtilities.h
jugicineHL/items/: jpItemSlotData.cpp  jpItemSlotData.h  jpItemsCommon.cpp  jpItemsCommon.h  jpPredefinedItems.cpp  jpPredefinedItems.h
jugicineHL/logic/: jpCommands.cpp  jpCommands.h  jpConditions.cpp  jpConditions.h  jpFunction.cpp  jpFunction.h  jpLogicAction.cpp  jpLogicAction.h  jpLogicCommon.cpp  jpLogicCommon.h  jpLogicState.cpp  jpLogicState.h  jpLogicStateCfg.cpp  jpLogicStateCfg.h  jpSceneLogicState.cpp  jpSceneLogicState.h  jpTransition.cpp  jpTransition.h  jpTransitionOperations.cpp  jpTransitionOperations.h
jugicineHL/systems/: jpInput.cpp  jpInput.h  jpSettings.cpp  jpSettings.h  jpSystemVarious.cpp  jpSystemVarious.h  jpUser.cpp  jpUser.h
jugicineHL/widgets/: jpItemsTable.cpp  jpItemsTable.h
jugimap/: jmApp.cpp  jmApp.h  jmCamera.cpp  jmCamera.h  jmCollision.cpp  jmCollision.h  jmCommon.cpp  jmCommon.h  jmCommonFunctions.cpp  jmCommonFunctions.h  jmGlobal.cpp  jmGlobal.h  jmInput.cpp  jmInput.h  jmMapLoader_bin.cpp  jmMapLoader_bin.h  jmParameter.cpp  jmParameter.h  jmSaveSignatures.h  jmScene.cpp  jmScene.h  jmSceneLayout.cpp  jmSceneLayout.h  jmSignal.cpp  jmSignal.h  jmStorage.h  jmStreams.cpp  jmStreams.h  jmSystem.cpp  jmSystem.h  jmText.cpp  jmText.h  jmTimer.cpp  jmTimer.h  jmTween.cpp  jmTween.h  jmUsingDeclarations.h  jmUtilities.cpp  jmUtilities.h  jugimap.h  (+1 more)
jugimap/animation/: jmAnimationCommon.cpp  jmAnimationCommon.h  jmFrameAnimation.cpp  jmFrameAnimation.h  jmTimelineAnimation.cpp  jmTimelineAnimation.h  jmTimelineAnimationInstance.cpp  jmTimelineAnimationInstance.h
jugimap/gui/: jmGuiBar.cpp  jmGuiBar.h  jmGuiButton.cpp  jmGuiButton.h  jmGuiCommon.cpp  jmGuiCommon.h  jmGuiSlider.cpp  jmGuiSlider.h  jmGuiText.cpp  jmGuiText.h  jmGuiTextField.cpp  jmGuiTextField.h  jmGuiTextInput.cpp  jmGuiTextInput.h
jugimap/map/: jmCompositeSprite.cpp  jmCompositeSprite.h  jmLayer.cpp  jmLayer.h  jmLayerElement.cpp  jmLayerElement.h  jmMap.cpp  jmMap.h  jmSprite.cpp  jmSprite.h  jmSpriteLayer.cpp  jmSpriteLayer.h  jmSpriteModifiers.cpp  jmSpriteModifiers.h  jmStandardSprite.cpp  jmStandardSprite.h  jmTextSprite.cpp  jmTextSprite.h  jmVectorLayer.cpp  jmVectorLayer.h  jmVectorShape.cpp  jmVectorShape.h  jmVectorShapeDrawing.cpp  jmVectorShapeDrawing.h  jmVectorShapeUtilities.cpp  jmVectorShapeUtilities.h
jugimap/source/: jmColor.cpp  jmColor.h  jmFont.cpp  jmFont.h  jmSourceContainers.cpp  jmSourceContainers.h  jmSourceFile.cpp  jmSourceFile.h  jmSourceItem.cpp  jmSourceItem.h  jmSourceObjectsLoader_xml.cpp  jmSourceObjectsLoader_xml.h  jmSourceSprite.cpp  jmSourceSprite.h  jmSystemSourceObjects.cpp  jmSystemSourceObjects.h
player/: jpPlayer.cpp  jpPlayer.h  main.cpp  main.h  player.pro  sources.cmake
(+178 files in other folders)
